# bullfund-ibkr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_documentation.json  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest.ini  run.sh  test_direct_ib.py  test_historical_debug.py  test_simple.py
docs/: account.json  market_data.json  research.json  scanner.json  trading.json
routers/: account.py  market_data.py  research.py  scanner.py  trading.py
tests/: conftest.py
tests/integration/: test_account_api.py  test_market_data_api.py  test_research_api.py  test_scanner_api.py  test_trading_api.py
