[project]
name = "bullfund-ibkr"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "ib-async>=2.0.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.2,<9",
    "pytest-asyncio>=1.2.0",
]
